<?xml version="1.0" encoding="utf-8"?>

<!-- Devin "Lauren" Elder -->
<!-- Java 1 Week 2 Project -->

<resources>

    <string name="app_name">Java1 MainApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_text">Find Weather</string>
    <string name="base_url">https://api.forecast.io/forecast/83da4ab87b461df1022cf12bf061b5d6/</string>
    <string name="input_lat">Input Latitude:</string>
    <string name="input_long">Input Longitude:</string>
    <string name="new_york_lat">40.6643</string>
    <string name="new_york_long">-73.9385</string>
    <string name="los_angeles_lat">34.0194</string>
    <string name="los_angeles_long">-118.4108</string>
    <string name="chicago_lat">41.8376</string>
    <string name="chicago_long">-87.6818</string>
    <string name="huston_lat">29.7805</string>
    <string name="huston_long">-95.3863</string>
    <string name="phoenix_lat">33.5722</string>
    <string name="phoenix_long">-112.0880</string>
    <string-array name="city_names">
        <item>New York, NY</item>
        <item>Los Angeles, CA</item>
        <item>Chicago, IL</item>
        <item>Houston ,TX</item>
        <item>Phoenix, AZ</item>
    </string-array>

</resources>
