<!-- Devin "Lauren" Elder -->
<!-- Java 1 Week 2 Project -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.DevinElder.java1mainapplication.MainActivity"
    tools:ignore="MergeRootFrame" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="232dp" >
    </ListView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical|left"
        android:text="@string/input_lat" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/new_york_lat" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical|left"
        android:text="@string/input_long" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/new_york_long" />

    <Button
        android:id="@+id/weather_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical|left"
        android:text="@string/button_text" />

</LinearLayout>
